[skip ci] 339f896f7fbb512d3512e74d7ce0785139945e84 Refactor model module (#165)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -516,7 +516,7 @@
 </li>
       <li><a href="API/luchador.nn.model.base_model.html#luchador.nn.model.base_model.get_model">get_model() (in module luchador.nn.model.base_model)</a>
 </li>
-      <li><a href="API/luchador.nn.model.util.html#luchador.nn.model.util.get_model_config">get_model_config() (in module luchador.nn.model.util)</a>
+      <li><a href="API/luchador.nn.util.html#luchador.nn.util.get_model_config">get_model_config() (in module luchador.nn.util)</a>
 </li>
       <li><a href="API/luchador.configure.html#luchador.configure.get_nn_backend">get_nn_backend() (in module luchador.configure)</a>
 </li>
@@ -784,8 +784,6 @@
 </li>
       <li><a href="API/luchador.nn.model.sequential.html#module-luchador.nn.model.sequential">luchador.nn.model.sequential (module)</a>
 </li>
-      <li><a href="API/luchador.nn.model.util.html#module-luchador.nn.model.util">luchador.nn.model.util (module)</a>
-</li>
       <li><a href="API/luchador.nn.saver.html#module-luchador.nn.saver">luchador.nn.saver (module)</a>
 </li>
       <li><a href="API/luchador.nn.summary.html#module-luchador.nn.summary">luchador.nn.summary (module)</a>
@@ -828,6 +826,8 @@
 </li>
       <li><a href="API/luchador.nn.theano.wrapper.html#module-luchador.nn.theano.wrapper">luchador.nn.theano.wrapper (module)</a>
 </li>
+      <li><a href="API/luchador.nn.util.html#module-luchador.nn.util">luchador.nn.util (module)</a>
+</li>
       <li><a href="API/luchador.util.html#module-luchador.util">luchador.util (module)</a>
 </li>
       <li><a href="API/luchador.util.logging.html#module-luchador.util.logging">luchador.util.logging (module)</a>
@@ -848,7 +848,7 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="API/luchador.nn.model.util.html#luchador.nn.model.util.make_model">make_model() (in module luchador.nn.model.util)</a>
+      <li><a href="API/luchador.nn.util.html#luchador.nn.util.make_model">make_model() (in module luchador.nn.util)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Mean">Mean (class in luchador.nn.tensorflow.layer)</a>
 
