--- a/html/genindex.html
+++ b/html/genindex.html
@@ -246,6 +246,8 @@
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseConv2D">BaseConv2D (class in luchador.nn.base.layer)</a>
 </li>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseCos">BaseCos (class in luchador.nn.base.layer)</a>
+</li>
       <li><a href="API/luchador.nn.base.cost.html#luchador.nn.base.cost.BaseCost">BaseCost (class in luchador.nn.base.cost)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseDense">BaseDense (class in luchador.nn.base.layer)</a>
@@ -289,6 +291,8 @@
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseSigmoid">BaseSigmoid (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.nn.base.cost.html#luchador.nn.base.cost.BaseSigmoidCrossEntropy">BaseSigmoidCrossEntropy (class in luchador.nn.base.cost)</a>
+</li>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseSin">BaseSin (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseSoftmax">BaseSoftmax (class in luchador.nn.base.layer)</a>
 </li>
@@ -380,6 +384,12 @@
 
       <ul>
         <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Conv2D">(class in luchador.nn.theano.layer)</a>
+</li>
+      </ul></li>
+      <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Cos">Cos (class in luchador.nn.tensorflow.layer)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Cos">(class in luchador.nn.theano.layer)</a>
 </li>
       </ul></li>
       <li><a href="API/luchador.env.remote.server.html#luchador.env.remote.server.create_env_app">create_env_app() (in module luchador.env.remote.server)</a>
@@ -1138,10 +1148,10 @@
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Renderer.set_transform">set_transform() (luchador.util.render.Renderer method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_translation">set_translation() (luchador.util.render.Transform method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.tensorflow.optimizer.html#luchador.nn.tensorflow.optimizer.SGD">SGD (class in luchador.nn.tensorflow.optimizer)</a>
 
       <ul>
@@ -1158,6 +1168,12 @@
 
       <ul>
         <li><a href="API/luchador.nn.theano.cost.html#luchador.nn.theano.cost.SigmoidCrossEntropy">(class in luchador.nn.theano.cost)</a>
+</li>
+      </ul></li>
+      <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Sin">Sin (class in luchador.nn.tensorflow.layer)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Sin">(class in luchador.nn.theano.layer)</a>
 </li>
       </ul></li>
       <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper.size">size (luchador.nn.base.wrapper.BaseWrapper attribute)</a>
@@ -1214,6 +1230,12 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Tanh">Tanh (class in luchador.nn.tensorflow.layer)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Tanh">(class in luchador.nn.theano.layer)</a>
+</li>
+      </ul></li>
       <li><a href="API/luchador.nn.tensorflow.wrapper.html#luchador.nn.tensorflow.wrapper.Tensor">Tensor (class in luchador.nn.tensorflow.wrapper)</a>
 
       <ul>
@@ -1222,10 +1244,10 @@
       </ul></li>
       <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.train">train() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
 </li>
-      <li><a href="API/luchador.util.render.html#luchador.util.render.Transform">Transform (class in luchador.util.render)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.util.render.html#luchador.util.render.Transform">Transform (class in luchador.util.render)</a>
+</li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.TransitionRecorder">TransitionRecorder (class in luchador.agent.recorder)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.TrueDiv">TrueDiv (class in luchador.nn.tensorflow.layer)</a>
