[skip ci] 23f53b401967f40a7beb88ed99b0e3bc181502a3 Add get_grad (#175)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -512,6 +512,8 @@
 </li>
       <li><a href="API/luchador.env.base.html#luchador.env.base.get_env">get_env() (in module luchador.env.base)</a>
 </li>
+      <li><a href="API/luchador.nn.util.html#luchador.nn.util.get_grad">get_grad() (in module luchador.nn.util)</a>
+</li>
       <li><a href="API/luchador.nn.base.initializer.html#luchador.nn.base.initializer.get_initializer">get_initializer() (in module luchador.nn.base.initializer)</a>
 </li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.Buffer.get_last_stack">get_last_stack() (luchador.agent.recorder.Buffer method)</a>
