[skip ci] d48d158771a6ffe1511dcd400edaff9126bc2f80 Prefix name with scope at wrapper creation time (#177)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -396,7 +396,7 @@
 </li>
       <li><a href="API/luchador.env.remote.manager.html#luchador.env.remote.manager.create_manager_app">create_manager_app() (in module luchador.env.remote.manager)</a>
 </li>
-      <li><a href="API/luchador.env.remote.server.html#luchador.env.remote.server.create_server">create_server() (in module luchador.env.remote.server)</a>
+      <li><a href="API/luchador.util.server.html#luchador.util.server.create_server">create_server() (in module luchador.util.server)</a>
 </li>
       <li><a href="API/luchador.env.flappy_bird.fb_component.html#luchador.env.flappy_bird.fb_component.Component.cx">cx (luchador.env.flappy_bird.fb_component.Component attribute)</a>
 </li>
@@ -416,10 +416,12 @@
         <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Dense">(class in luchador.nn.theano.layer)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.deserialize_outcome">deserialize_outcome() (in module luchador.env.remote.util)</a>
+      <li><a href="API/luchador.util.serialize.html#luchador.util.serialize.deserialize_numpy_array">deserialize_numpy_array() (in module luchador.util.serialize)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.deserialize_outcome">deserialize_outcome() (in module luchador.env.remote.util)</a>
+</li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Attribute.disable">disable() (luchador.util.render.Attribute method)</a>
 
       <ul>
@@ -762,10 +764,10 @@
 </li>
       <li><a href="API/luchador.env.flappy_bird.fb_util.html#module-luchador.env.flappy_bird.fb_util">luchador.env.flappy_bird.fb_util (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.env.flappy_bird.flappy_bird.html#module-luchador.env.flappy_bird.flappy_bird">luchador.env.flappy_bird.flappy_bird (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.env.remote.html#module-luchador.env.remote">luchador.env.remote (module)</a>
 </li>
       <li><a href="API/luchador.env.remote.client.html#module-luchador.env.remote.client">luchador.env.remote.client (module)</a>
@@ -853,6 +855,10 @@
       <li><a href="API/luchador.util.mixin.html#module-luchador.util.mixin">luchador.util.mixin (module)</a>
 </li>
       <li><a href="API/luchador.util.render.html#module-luchador.util.render">luchador.util.render (module)</a>
+</li>
+      <li><a href="API/luchador.util.serialize.html#module-luchador.util.serialize">luchador.util.serialize (module)</a>
+</li>
+      <li><a href="API/luchador.util.server.html#module-luchador.util.server">luchador.util.server (module)</a>
 </li>
       <li><a href="API/luchador.util.yaml_util.html#module-luchador.util.yaml_util">luchador.util.yaml_util (module)</a>
 </li>
@@ -1116,6 +1122,8 @@
         <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.SerializeMixin.serialize">(luchador.util.mixin.SerializeMixin method)</a>
 </li>
       </ul></li>
+      <li><a href="API/luchador.util.serialize.html#luchador.util.serialize.serialize_numpy_array">serialize_numpy_array() (in module luchador.util.serialize)</a>
+</li>
       <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.serialize_outcome">serialize_outcome() (in module luchador.env.remote.util)</a>
 </li>
       <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.SerializeMixin">SerializeMixin (class in luchador.util.mixin)</a>
@@ -1154,10 +1162,10 @@
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Renderer.set_transform">set_transform() (luchador.util.render.Renderer method)</a>
 </li>
-      <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_translation">set_translation() (luchador.util.render.Transform method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_translation">set_translation() (luchador.util.render.Transform method)</a>
+</li>
       <li><a href="API/luchador.nn.tensorflow.optimizer.html#luchador.nn.tensorflow.optimizer.SGD">SGD (class in luchador.nn.tensorflow.optimizer)</a>
 
       <ul>
