[skip ci] 7c1817798801619d670fdb70b8b836af3e882f7f Add get_input (#179)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -518,6 +518,12 @@
 </li>
       <li><a href="API/luchador.nn.base.initializer.html#luchador.nn.base.initializer.get_initializer">get_initializer() (in module luchador.nn.base.initializer)</a>
 </li>
+      <li><a href="API/luchador.nn.tensorflow.scope.html#luchador.nn.tensorflow.scope.get_input">get_input() (in module luchador.nn.tensorflow.scope)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.scope.html#luchador.nn.theano.scope.get_input">(in module luchador.nn.theano.scope)</a>
+</li>
+      </ul></li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.Buffer.get_last_stack">get_last_stack() (luchador.agent.recorder.Buffer method)</a>
 
       <ul>
@@ -540,10 +546,10 @@
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.get_optimizer">get_optimizer() (in module luchador.nn.base.optimizer)</a>
 </li>
-      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.get_output_tensors">get_output_tensors() (luchador.nn.model.sequential.Sequential method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.get_output_tensors">get_output_tensors() (luchador.nn.model.sequential.Sequential method)</a>
+</li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer.get_parameter_variables">get_parameter_variables() (luchador.nn.base.optimizer.BaseOptimizer method)</a>
 
       <ul>
