[skip ci] d3b14f899dc3ff90ee969649b68ecc3a186aa1a5 Add tile layer (#180)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -278,10 +278,10 @@
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer">BaseOptimizer (class in luchador.nn.base.optimizer)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseReLU">BaseReLU (class in luchador.nn.base.layer)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseRMSProp">BaseRMSProp (class in luchador.nn.base.optimizer)</a>
 </li>
       <li><a href="API/luchador.nn.base.session.html#luchador.nn.base.session.BaseSession">BaseSession (class in luchador.nn.base.session)</a>
@@ -305,6 +305,8 @@
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseTanh">BaseTanh (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor">BaseTensor (class in luchador.nn.base.wrapper)</a>
+</li>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseTile">BaseTile (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseTrueDiv">BaseTrueDiv (class in luchador.nn.base.layer)</a>
 </li>
@@ -1262,10 +1264,12 @@
         <li><a href="API/luchador.nn.theano.wrapper.html#luchador.nn.theano.wrapper.Tensor">(class in luchador.nn.theano.wrapper)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.train">train() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
+      <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Tile">Tile (class in luchador.nn.theano.layer)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.train">train() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
+</li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform">Transform (class in luchador.util.render)</a>
 </li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.TransitionRecorder">TransitionRecorder (class in luchador.agent.recorder)</a>
