--- a/html/genindex.html
+++ b/html/genindex.html
@@ -420,10 +420,10 @@
       </ul></li>
       <li><a href="API/luchador.util.serialize.html#luchador.util.serialize.deserialize_numpy_array">deserialize_numpy_array() (in module luchador.util.serialize)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.deserialize_outcome">deserialize_outcome() (in module luchador.env.remote.util)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Attribute.disable">disable() (luchador.util.render.Attribute method)</a>
 
       <ul>
@@ -432,6 +432,8 @@
         <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.disable">(luchador.util.render.Transform method)</a>
 </li>
       </ul></li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DoubleDeepQLearning">DoubleDeepQLearning (class in luchador.agent.rl.q_learning)</a>
+</li>
       <li><a href="API/luchador.agent.dqn.html#luchador.agent.dqn.DQNAgent">DQNAgent (class in luchador.agent.dqn)</a>
 </li>
   </ul></td>
@@ -1266,10 +1268,14 @@
       </ul></li>
       <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Tile">Tile (class in luchador.nn.theano.layer)</a>
 </li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.train">train() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
+
+      <ul>
+        <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DoubleDeepQLearning.train">(luchador.agent.rl.q_learning.DoubleDeepQLearning method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.train">train() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
-</li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform">Transform (class in luchador.util.render)</a>
 </li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.TransitionRecorder">TransitionRecorder (class in luchador.agent.recorder)</a>
