[skip ci] ca928f0daeb7dc04c404908a6697085f4fc9356b Make Operation retrievable (#184)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -276,12 +276,14 @@
 </li>
       <li><a href="API/luchador.nn.base.initializer.html#luchador.nn.base.initializer.BaseNormal">BaseNormal (class in luchador.nn.base.initializer)</a>
 </li>
-      <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer">BaseOptimizer (class in luchador.nn.base.optimizer)</a>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseOperation">BaseOperation (class in luchador.nn.base.wrapper)</a>
 </li>
-      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseReLU">BaseReLU (class in luchador.nn.base.layer)</a>
+      <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer">BaseOptimizer (class in luchador.nn.base.optimizer)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseReLU">BaseReLU (class in luchador.nn.base.layer)</a>
+</li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseRMSProp">BaseRMSProp (class in luchador.nn.base.optimizer)</a>
 </li>
       <li><a href="API/luchador.nn.base.session.html#luchador.nn.base.session.BaseSession">BaseSession (class in luchador.nn.base.session)</a>
@@ -548,10 +550,16 @@
 </li>
       <li><a href="API/luchador.configure.html#luchador.configure.get_nn_dtype">get_nn_dtype() (in module luchador.configure)</a>
 </li>
-      <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.get_optimizer">get_optimizer() (in module luchador.nn.base.optimizer)</a>
+      <li><a href="API/luchador.nn.tensorflow.scope.html#luchador.nn.tensorflow.scope.get_operation">get_operation() (in module luchador.nn.tensorflow.scope)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.scope.html#luchador.nn.theano.scope.get_operation">(in module luchador.nn.theano.scope)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.get_optimizer">get_optimizer() (in module luchador.nn.base.optimizer)</a>
+</li>
       <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.get_output_tensors">get_output_tensors() (luchador.nn.model.sequential.Sequential method)</a>
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer.get_parameter_variables">get_parameter_variables() (luchador.nn.base.optimizer.BaseOptimizer method)</a>
@@ -954,11 +962,9 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.Operation">Operation (class in luchador.nn.base.wrapper)</a>
+      <li><a href="API/luchador.nn.tensorflow.wrapper.html#luchador.nn.tensorflow.wrapper.Operation">Operation (class in luchador.nn.tensorflow.wrapper)</a>
 
       <ul>
-        <li><a href="API/luchador.nn.tensorflow.wrapper.html#luchador.nn.tensorflow.wrapper.Operation">(class in luchador.nn.tensorflow.wrapper)</a>
-</li>
         <li><a href="API/luchador.nn.theano.wrapper.html#luchador.nn.theano.wrapper.Operation">(class in luchador.nn.theano.wrapper)</a>
 </li>
       </ul></li>
@@ -1300,14 +1306,12 @@
         <li><a href="API/luchador.nn.theano.initializer.html#luchador.nn.theano.initializer.Uniform">(class in luchador.nn.theano.initializer)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper.unwrap">unwrap() (luchador.nn.base.wrapper.BaseWrapper method)</a>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseOperation.unwrap">unwrap() (luchador.nn.base.wrapper.BaseOperation method)</a>
 
       <ul>
-        <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.Operation.unwrap">(luchador.nn.base.wrapper.Operation method)</a>
+        <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper.unwrap">(luchador.nn.base.wrapper.BaseWrapper method)</a>
 </li>
         <li><a href="API/luchador.nn.tensorflow.initializer.html#luchador.nn.tensorflow.initializer.InitializerMixin.unwrap">(luchador.nn.tensorflow.initializer.InitializerMixin method)</a>
-</li>
-        <li><a href="API/luchador.nn.theano.wrapper.html#luchador.nn.theano.wrapper.Operation.unwrap">(luchador.nn.theano.wrapper.Operation method)</a>
 </li>
       </ul></li>
   </ul></td>
