[skip ci] 280c15f581c5f98c34c81a51a1089d707eccea10 Remove serialize and equality (#185)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -1132,12 +1132,8 @@
 </li>
       <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential">Sequential (class in luchador.nn.model.sequential)</a>
 </li>
-      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.serialize">serialize() (luchador.nn.model.sequential.Sequential method)</a>
-
-      <ul>
-        <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.SerializeMixin.serialize">(luchador.util.mixin.SerializeMixin method)</a>
+      <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.SerializeMixin.serialize">serialize() (luchador.util.mixin.SerializeMixin method)</a>
 </li>
-      </ul></li>
       <li><a href="API/luchador.util.serialize.html#luchador.util.serialize.serialize_numpy_array">serialize_numpy_array() (in module luchador.util.serialize)</a>
 </li>
       <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.serialize_outcome">serialize_outcome() (in module luchador.env.remote.util)</a>
@@ -1178,10 +1174,10 @@
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Renderer.set_transform">set_transform() (luchador.util.render.Renderer method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_translation">set_translation() (luchador.util.render.Transform method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.tensorflow.optimizer.html#luchador.nn.tensorflow.optimizer.SGD">SGD (class in luchador.nn.tensorflow.optimizer)</a>
 
       <ul>
